Lab_1 Done and Pdf Uploaded

--- a/LabWork/Lab01.ipynb
+++ b/LabWork/Lab01.ipynb
@@ -19,36 +19,36 @@
      "output_type": "stream",
      "text": [
       "First loop:\n",
-      "Iteration 0 , n = 0, id(n) = 140718963358104\n",
-      "After increment , n = 1, id(n) = 140718963358136\n",
+      "Iteration 0 , n = 0, id(n) = 140718988196248\n",
+      "After increment , n = 1, id(n) = 140718988196280\n",
       "*\n",
-      "Iteration 1 , n = 1, id(n) = 140718963358136\n",
-      "After increment , n = 2, id(n) = 140718963358168\n",
+      "Iteration 1 , n = 1, id(n) = 140718988196280\n",
+      "After increment , n = 2, id(n) = 140718988196312\n",
       "**\n",
-      "Iteration 2 , n = 2, id(n) = 140718963358168\n",
-      "After increment , n = 3, id(n) = 140718963358200\n",
+      "Iteration 2 , n = 2, id(n) = 140718988196312\n",
+      "After increment , n = 3, id(n) = 140718988196344\n",
       "***\n",
-      "Iteration 3 , n = 3, id(n) = 140718963358200\n",
-      "After increment , n = 4, id(n) = 140718963358232\n",
+      "Iteration 3 , n = 3, id(n) = 140718988196344\n",
+      "After increment , n = 4, id(n) = 140718988196376\n",
       "****\n",
-      "Iteration 4 , n = 4, id(n) = 140718963358232\n",
-      "After increment , n = 5, id(n) = 140718963358264\n",
+      "Iteration 4 , n = 4, id(n) = 140718988196376\n",
+      "After increment , n = 5, id(n) = 140718988196408\n",
       "*****\n",
       "Second loop:\n",
-      "Iteration -5 , n = -5, id(n) = 140718963357944\n",
-      "After increment , n = -4, id(n) = 140718963357976\n",
+      "Iteration -5 , n = -5, id(n) = 140718988196088\n",
+      "After increment , n = -4, id(n) = 140718988196120\n",
       "*****\n",
-      "Iteration -4 , n = -4, id(n) = 140718963357976\n",
-      "After increment , n = -3, id(n) = 140718963358008\n",
+      "Iteration -4 , n = -4, id(n) = 140718988196120\n",
+      "After increment , n = -3, id(n) = 140718988196152\n",
       "****\n",
-      "Iteration -3 , n = -3, id(n) = 140718963358008\n",
-      "After increment , n = -2, id(n) = 140718963358040\n",
+      "Iteration -3 , n = -3, id(n) = 140718988196152\n",
+      "After increment , n = -2, id(n) = 140718988196184\n",
       "***\n",
-      "Iteration -2 , n = -2, id(n) = 140718963358040\n",
-      "After increment , n = -1, id(n) = 140718963358072\n",
+      "Iteration -2 , n = -2, id(n) = 140718988196184\n",
+      "After increment , n = -1, id(n) = 140718988196216\n",
       "**\n",
-      "Iteration -1 , n = -1, id(n) = 140718963358072\n",
-      "After increment , n = 0, id(n) = 140718963358104\n",
+      "Iteration -1 , n = -1, id(n) = 140718988196216\n",
+      "After increment , n = 0, id(n) = 140718988196248\n",
       "*\n"
      ]
     }
@@ -67,7 +67,9 @@
     "    print(f\"Iteration {n} , n = {n}, id(n) = {id(n)}\")\n",
     "    n += 1\n",
     "    print(f\"After increment , n = {n}, id(n) = {id(n)}\")\n",
-    "    print(\"*\" * (0 - n + 1))\n"
+    "    print(\"*\" * (0 - n + 1))\n",
+    "    \n",
+    "# Output:\n"
    ]
   },
   {
@@ -88,9 +90,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID of Dict_1: 2701165280896\n",
+      "ID of Dict_1: 2339821493376\n",
       "Concat_Dict:  {1: 10, 2: 20, 3: 30, 4: 40, 5: 50, 6: 60}\n",
-      "ID:  2701165280768\n"
+      "ID:  2339843122432\n"
      ]
     }
    ],
@@ -102,7 +104,10 @@
     "concat_dict = dic1 | dic2 | dic3\n",
     "\n",
     "print(\"Concat_Dict: \",concat_dict)\n",
-    "print(\"ID: \",id(concat_dict))"
+    "print(\"ID: \",id(concat_dict))\n",
+    "\n",
+    "    \n",
+    "# Output:"
    ]
   },
   {
@@ -123,8 +128,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Address of list before removal of duplicates: 2701165245568\n",
-      "Address of list after removal of duplicates: 2701165269888\n"
+      "Address of list before removal of duplicates: 2339843172736\n",
+      "Address of list after removal of duplicates: 2339843191808\n"
      ]
     }
    ],
@@ -136,7 +141,10 @@
     "s = set(l)  # As we know set doesn't allow duplicates\n",
     "l = list(s) # Converting set back to list\n",
     "\n",
-    "print(f\"Address of list after removal of duplicates: {id(l)}\")\n"
+    "print(f\"Address of list after removal of duplicates: {id(l)}\")\n",
+    "\n",
+    "    \n",
+    "# Output:\n"
    ]
   },
   {
@@ -157,9 +165,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id of tuple is: 2701160549728\n",
-      "element before tuples are:  7\n",
-      "id of list is: 2701159089984\n"
+      "Id of tuple is: 2339842950960\n",
+      "Element before tuple are:  7\n",
+      "Id of list is: 2339843117440\n"
      ]
     }
    ],
@@ -172,7 +180,10 @@
     "        break\n",
     "    counter +=1\n",
     "print(\"Element before tuple are: \", counter)\n",
-    "print(\"Id of list is:\",id(list_2))"
+    "print(\"Id of list is:\",id(list_2))\n",
+    "\n",
+    "    \n",
+    "# Output:"
    ]
   },
   {
