--- a/LabWork/Lab02_Question_2.ipynb
+++ b/LabWork/Lab02_Question_2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a1ef377d",
    "metadata": {},
    "outputs": [
@@ -20,16 +20,16 @@
      "output_type": "stream",
      "text": [
       "Insertion\n",
-      "Self-Made Insertion:  3.00002284348011e-06\n",
-      "Built-in Insertion:  1.100008375942707e-06\n",
+      "Self-Made Insertion:  7.099995855242014e-06\n",
+      "Built-in Insertion:  2.6999914553016424e-06\n",
       "\n",
       "Deletion\n",
-      "Self-Made Deletion:  3.999972250312567e-06\n",
-      "Built-in Deletion:  2.2999593056738377e-06\n",
+      "Self-Made Deletion:  8.400005754083395e-06\n",
+      "Built-in Deletion:  6.499991286545992e-06\n",
       "\n",
       "Searching\n",
-      "Self-Made Deletion:  3.700028173625469e-06\n",
-      "Built-in Deletion:  1.600012183189392e-06\n"
+      "Self-Made Searching:  1.0799994925037026e-05\n",
+      "Built-in Searching:  4.2000028770416975e-06\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "cf908ba5",
    "metadata": {},
    "outputs": [
@@ -88,24 +88,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(1, 2, 0, 3, 4, 5, 6)\n",
       "Insertion\n",
-      "Self-Made Insertion:  5.999987479299307e-06\n",
-      "Built-in Insertion:  2.8999638743698597e-06\n",
+      "Self-Made Insertion:  5.799985956400633e-06\n",
+      "Built-in Insertion:  4.1000021155923605e-06\n",
       "\n",
       "Deletion\n",
-      "Self-Made Deletion:  8.100003469735384e-06\n",
-      "Built-in Deletion:  2.0999577827751637e-06\n",
+      "Self-Made Deletion:  1.0600022505968809e-05\n",
+      "Built-in Deletion:  3.9000005926936865e-06\n",
       "\n",
       "Searching\n",
-      "Self-Made Searching:  3.89997148886323e-06\n",
-      "Built-in Searching:  8.200004231184721e-06\n"
+      "Self-Made Searching:  7.199996616691351e-06\n",
+      "Built-in Searching:  3.6999990697950125e-06\n"
      ]
     }
    ],
    "source": [
     "def tuple_insertion(tup,value,pos):\n",
     "    sub_tup = tup[:pos]\n",
-    "    post_tup = tup[pos+1:]\n",
+    "    post_tup = tup[pos:]\n",
     "    return sub_tup + (value,) + post_tup\n",
     "\n",
     "def tuple_deletion(tup, value):\n",
