Lab_04 Code + Print Done

--- a/LabWork/Lab4_Questions.ipynb
+++ b/LabWork/Lab4_Questions.ipynb
@@ -10,40 +10,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ff791247",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list assignment index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n\u001b[32m      6\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m         \u001b[43mC\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m = \u001b[32m0\u001b[39m\n\u001b[32m      8\u001b[39m         \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n\u001b[32m      9\u001b[39m             C[i][j] = C[i][j] + A[i][j] * B[i][j]\n",
-      "\u001b[31mIndexError\u001b[39m: list assignment index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix C:\n",
+      "[30, 24, 18]\n",
+      "[84, 69, 54]\n",
+      "[138, 114, 90]\n"
      ]
     }
    ],
    "source": [
-    "A = [[1,2],[2,3]]\n",
-    "B = [[5,4],[2,1]]\n",
-    "C = []\n",
-    "n = int(input(\"Enter Order of Matrix (NxN): \"))\n",
-    "for i in range(n):\n",
-    "    for j in range(n):\n",
-    "        C[i][j] = 0\n",
-    "        for k in range(n):\n",
-    "            C[i][j] = C[i][j] + A[i][j] * B[i][j]\n",
+    "def matMul(A,B):\n",
+    "    if len(A[0]) == len(B): # cA == rB\n",
+    "        n = len(A)\n",
+    "        C = [[0 for nul in range(n)] for nul in range(n)]\n",
+    "        for i in range(n):\n",
+    "            for j in range(n):\n",
+    "                for k in range(n):\n",
+    "                    C[i][j] = C[i][j] + A[i][k] * B[k][j]\n",
+    "        return C\n",
+    "    return None \n",
     "\n",
-    "    "
+    "A = [[1, 2, 3],\n",
+    "     [4, 5, 6],\n",
+    "     [7, 8, 9]]\n",
+    "B = [[9, 8, 7],\n",
+    "     [6, 5, 4],\n",
+    "     [3, 2, 1]]\n",
+    "\n",
+    "C = matMul(A,B)\n",
+    "print(\"Matrix C:\")\n",
+    "for row in C:\n",
+    "    print(row)\n",
+    "# Output:    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "126f2260",
+   "metadata": {},
+   "source": [
+    "## Exercise (b)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d19be6a",
+   "id": "3f461774",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix C: of Order rAxcB\n",
+      "[23, 24, 18, 24]\n",
+      "[56, 69, 54, 60]\n",
+      "[65, 98, 82, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def matMul(A,B):\n",
+    "    rA, cA, rB, cB = len(A), len(A[0]), len(B), len(B[0]) \n",
+    "    if cA == rB:\n",
+    "        C = [[0 for nul in range(cB)] for nul in range(rA)]\n",
+    "        for i in range(cA):\n",
+    "            for j in range(cB):\n",
+    "                for k in range(rB):\n",
+    "                    C[i][j] = C[i][j] + A[i][k] * B[k][j]\n",
+    "        return C\n",
+    "    return None \n",
+    "\n",
+    "A = [[1, 2, 3],\n",
+    "     [4, 5, 6],\n",
+    "     [7, 8, 1]]\n",
+    "B = [[2, 8, 7, 4],\n",
+    "     [6, 5, 4, 4],\n",
+    "     [3, 2, 1, 4]]\n",
+    "\n",
+    "C = matMul(A,B)\n",
+    "print(\"Matrix C: of Order rAxcB\")\n",
+    "for row in C:\n",
+    "    print(row)\n",
+    "    \n",
+    "# Output:    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2444bcdc",
    "metadata": {},
    "outputs": [],
    "source": []
