Added Part-C to Lab 04 Code & Print

--- a/LabWork/Lab4_Questions.ipynb
+++ b/LabWork/Lab4_Questions.ipynb
@@ -104,9 +104,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e788377",
+   "metadata": {},
+   "source": [
+    "### Exercise (c)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2444bcdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\n",
+      "[[ 27  30  33]\n",
+      " [ 61  68  75]\n",
+      " [ 95 106 117]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def matmul(A, B):\n",
+    "    if A.shape[1] != B.shape[0]:\n",
+    "        return \"Error: Cannot multiply, dimensions not aligned!\"\n",
+    "    return np.dot(A, B)\n",
+    "\n",
+    "A = np.array([[1, 2],\n",
+    "              [3, 4],\n",
+    "              [5, 6]])\n",
+    "\n",
+    "B = np.array([[7, 8, 9],\n",
+    "              [10, 11, 12]])\n",
+    "print(\"C:\")\n",
+    "print(matmul(A, B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7efee89",
    "metadata": {},
    "outputs": [],
    "source": []
